--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 # Standard routine
 cmake_minimum_required(VERSION 3.16)
-project(example_app
-        VERSION 0.0.12 # CI_PROJECT_VERSION
+project(WarpMessengerClient
+        VERSION 0.0.1 # CI_PROJECT_VERSION
     )
 
 option(BUILD_SHARED_LIBS "Build shared libs" OFF)
 option(AUIB_FORCE_PRECOMPILED "AUI.Boot: force precompiled dependencies" OFF)
 option(AUIB_NO_PRECOMPILED "AUI.Boot: disable precompiled dependencies" OFF)
 
-set(AUI_VERSION v8.0.0-rc.13)
+set(AUI_VERSION v8.0.0-rc.14)
 
 # Use AUI.Boot
 file(
@@ -38,7 +38,7 @@ aui_enable_tests(${PROJECT_NAME})
 
 # Setup icon, display name, etc
 aui_app(TARGET ${PROJECT_NAME}
-        NAME "AUI App Example"
+        NAME "Warp Messenger"
         VENDOR "AUI Project"
         ICON "assets/img/icon.svg"
 )
